--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,11 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Shuolin Xiao/Personal Homepage"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "personal description"
+name                     : &name "Shuolin Xiao"
+avatar                   : "figure_Shuolin_Xiao.png"
+description              : &description "researcher for sustainability"
 url                      : https:/Shuolin-Xiao.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "a20070348/Shuolin-Xiao.github.io"
