--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,6 @@ locale                   : "en-US"
 title                    : "Shuolin Xiao/Personal Homepage"
 title_separator          : "-"
 name                     : &name "Shuolin Xiao"
-avatar                   : "figure_Shuolin_Xiao.png"
 description              : &description "researcher for sustainability"
 url                      : https:/Shuolin-Xiao.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -81,10 +80,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
-  avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
+  name             : "Shuolin Xiao"
+  avatar           : "figure_Shuolin_Xiao.png"
+  bio              : "researcher for sustainability"
+  location         : "Battimore, USA"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "http://yourfullgooglescholarurl.com"
