--- a/_config.yml
+++ b/_config.yml
@@ -85,10 +85,9 @@ author:
   bio              : "researcher for sustainability"
   location         : "Battimore, USA"
   employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            :
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  googlescholar    : "https://scholar.google.com/citations?hl=en&user=tE4DjcoAAAAJ&view_op=list_works&sortby=pubdate"
+  email            : "sxiao20@jh.edu"
+  researchgate     : "https://www.researchgate.net/profile/Shuolin-Xiao"
   uri              :
   bitbucket        :
   codepen          :
@@ -96,20 +95,18 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : "https://orcid.org/my-orcid?orcid=0000-0002-6364-6365"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
   vine             :
   weibo            :
   xing             :
