--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,13 @@
 # main links links
 main:
   - title: "Publications"
-    url: /publications/
+    url: /publications/  
+
+   - title: "Teaching Philosophy Learnt from the Ancients and My Teaching Experience"
+     url: /teaching/    
 
   - title: "Talks"
-    url: /talks/    
-
- #  - title: "Teaching"
- #    url: /teaching/    
+    url: /talks/ 
     
   - title: "Portfolio"
     url: /portfolio/
