--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
   - title: "Talks"
     url: /talks/ 
 
-  - title: "Teaching Philosophy Learnt from the Ancients and My Teaching Experience"
+  - title: "Teaching"
     url: /teaching/   
     
   - title: "Portfolio"
