--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Shuolin Xiao/Personal Homepage"
 title_separator          : "-"
 name                     : &name "Shuolin Xiao"
-description              : &description "researcher for sustainability"
+description              : &description "researcher for AI-booasted micrometeorological applications"
 url                      : https:/Shuolin-Xiao.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "a20070348/Shuolin-Xiao.github.io"
