--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Shuolin Xiao"
   avatar           : "figure_Shuolin_Xiao.png"
-  bio              : "researcher for researcher for AI-booasted micrometeorological applications"
+  bio              : "researcher for AI-booasted micrometeorological applications"
   location         : "Battimore, USA"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=tE4DjcoAAAAJ&view_op=list_works&sortby=pubdate"
